Update menu items

--- a/content/data/esign/error-codes.mdx
+++ b/content/data/esign/error-codes.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_title: Error codes
 page_title: Aadhaar eSign error codes
-order: 7
+order: 8
 visible_in_sidebar: true
 ---
 
@@ -10,208 +10,191 @@ visible_in_sidebar: true
 Below is a table which contains the error codes and corresponding error messages, for errors that may occur during the eSign flow.
 
 <table>
-    <tbody>
-        <tr>
-            <th> Error code </th>
-            <th> Error message </th>
-        </tr>
-        <tr>
-            <td>
-                <code>session_expired</code>
-            </td>
-            <td> The session has expired. Please try again. </td>
-        </tr>
-        <tr>
-            <td>
-                <code>document_already_signed</code>
-            </td>
-            <td> The document has already been signed successfully. </td>
-        </tr>
-        <tr>
-            <td>
-                <code>document_not_found</code>
-            </td>
-            <td> This document is not available anymore. </td>
-        </tr>
-        <tr>
-            <td>
-                <code>signature_creation_failure</code>
-            </td>
-            <td> Failed to generate signature. </td>
-        </tr>
-        <tr>
-            <td>
-                <code>exceeded_otp_retries</code>
-            </td>
-            <td> Exceeded OTP failure attempts. </td>
-        </tr>
-        <tr>
-            <td>
-                <code>otp_not_entered</code>
-            </td>
-            <td> User terminated eKYC process after OTP Generation. </td>
-        </tr>
-        <tr>
-            <td>
-                <code>signer_declined</code>
-            </td>
-            <td> Document signing was declined. </td>
-        </tr>
-        <tr>
-            <td>
-                <code>otp_expired</code>
-            </td>
-            <td> OTP expired. </td>
-        </tr>
-        <tr>
-            <td>
-                <code>aadhaar_not_linked</code>
-            </td>
-            <td> Aadhaar not linked with mobile. </td>
-        </tr>
-        <tr>
-            <td>
-                <code>service_down</code>
-            </td>
-            <td> ESP service down. </td>
-        </tr>
-        <tr>
-            <td>
-                <code>name_match_error</code>
-            </td>
-            <td>
-                Your name does not match with the data received from Aadhaar.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <code>yob_match_error</code>
-            </td>
-            <td>
-                Your year of birth does not match with the data received from Aadhaar.
-            </td>
-        </tr>
-         <tr>
-            <td>
-                <code>invaild_otp</code>
-            </td>
-            <td>
-                Invalid OTP value.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <code>aadhaar_not_linked</code>
-            </td>
-            <td>
-                Aadhaar number does not have mobile number.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <code>otp_flooding_error</code>
-            </td>
-            <td>
-                OTP Flooding error.
-            </td>
-        </tr>
-         <tr>
-            <td>
-                <code>transaction_not_allowed</code>
-            </td>
-            <td>
-               transaction not allowed
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <code>exceeded_otp_generation</code>
-            </td>
-            <td>
-               Exceeded Maximum OTP generation Limit. Please try After some time.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <code>exceeded_otp_attempt</code>
-            </td>
-            <td>
-               Maximum number of attempts for OTP match is exceeded or OTP is not generated. Please generate a fresh OTP and try to authenticate again.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <code>wait_otp_generation_1min</code>
-            </td>
-            <td>
-              Please wait for a minute to generate a new OTP.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <code>wait_otp_generation_30min</code>
-            </td>
-            <td>
-             The maximum OTP generation limit (5) has been exceeded. Please wait for 30 minutes to generate a new OTP.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <code>tnx_value_mismatch</code>
-            </td>
-            <td>
-             txn value did not match with txn value of Request OTP API.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <code>wait_otp_generation_1min</code>
-            </td>
-            <td>
-              Please wait for a minute to generate a new OTP.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <code>aadhaar_locked</code>
-            </td>
-            <td>
-              Aadhaar locked by Aadhaar number holder. This mean that all permanent forms of identifiers are locked for any kind of authentication. Resident can still use VID.
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <code>invalid_aadhaar_number</code>
-            </td>
-            <td>
-              Invalid Aadhaar Number/Virtual ID.
-            </td>
-        </tr>
-         <tr>
-            <td>
-                <code>exceeded_otp_attempt</code>
-            </td>
-            <td>
-             The maximum allowed OTP attempts (3) has been exceeded. Please generate a fresh OTP and try to authenticate again
-            </td>
-        </tr>
-         <tr>
-            <td>
-                <code>aadhaar_suspended</code>
-            </td>
-            <td>
-             Aadhaar suspended (Aadhaar is not in authenticatable status).
-            </td>
-        </tr>
-         <tr>
-            <td>
-                <code>upstream_server_error</code>
-            </td>
-            <td>
-               Upstream's internal service error
-            </td>
-        </tr>
-    </tbody>
+  <tbody>
+    <tr>
+      <th> Error code </th>
+      <th> Error message </th>
+    </tr>
+    <tr>
+      <td>
+        <code>session_expired</code>
+      </td>
+      <td> The session has expired. Please try again. </td>
+    </tr>
+    <tr>
+      <td>
+        <code>document_already_signed</code>
+      </td>
+      <td> The document has already been signed successfully. </td>
+    </tr>
+    <tr>
+      <td>
+        <code>document_not_found</code>
+      </td>
+      <td> This document is not available anymore. </td>
+    </tr>
+    <tr>
+      <td>
+        <code>signature_creation_failure</code>
+      </td>
+      <td> Failed to generate signature. </td>
+    </tr>
+    <tr>
+      <td>
+        <code>exceeded_otp_retries</code>
+      </td>
+      <td> Exceeded OTP failure attempts. </td>
+    </tr>
+    <tr>
+      <td>
+        <code>otp_not_entered</code>
+      </td>
+      <td> User terminated eKYC process after OTP Generation. </td>
+    </tr>
+    <tr>
+      <td>
+        <code>signer_declined</code>
+      </td>
+      <td> Document signing was declined. </td>
+    </tr>
+    <tr>
+      <td>
+        <code>otp_expired</code>
+      </td>
+      <td> OTP expired. </td>
+    </tr>
+    <tr>
+      <td>
+        <code>aadhaar_not_linked</code>
+      </td>
+      <td> Aadhaar not linked with mobile. </td>
+    </tr>
+    <tr>
+      <td>
+        <code>service_down</code>
+      </td>
+      <td> ESP service down. </td>
+    </tr>
+    <tr>
+      <td>
+        <code>name_match_error</code>
+      </td>
+      <td>Your name does not match with the data received from Aadhaar.</td>
+    </tr>
+    <tr>
+      <td>
+        <code>yob_match_error</code>
+      </td>
+      <td>
+        Your year of birth does not match with the data received from Aadhaar.
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <code>invaild_otp</code>
+      </td>
+      <td>Invalid OTP value.</td>
+    </tr>
+    <tr>
+      <td>
+        <code>aadhaar_not_linked</code>
+      </td>
+      <td>Aadhaar number does not have mobile number.</td>
+    </tr>
+    <tr>
+      <td>
+        <code>otp_flooding_error</code>
+      </td>
+      <td>OTP Flooding error.</td>
+    </tr>
+    <tr>
+      <td>
+        <code>transaction_not_allowed</code>
+      </td>
+      <td>transaction not allowed</td>
+    </tr>
+    <tr>
+      <td>
+        <code>exceeded_otp_generation</code>
+      </td>
+      <td>
+        Exceeded Maximum OTP generation Limit. Please try After some time.
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <code>exceeded_otp_attempt</code>
+      </td>
+      <td>
+        Maximum number of attempts for OTP match is exceeded or OTP is not
+        generated. Please generate a fresh OTP and try to authenticate again.
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <code>wait_otp_generation_1min</code>
+      </td>
+      <td>Please wait for a minute to generate a new OTP.</td>
+    </tr>
+    <tr>
+      <td>
+        <code>wait_otp_generation_30min</code>
+      </td>
+      <td>
+        The maximum OTP generation limit (5) has been exceeded. Please wait for
+        30 minutes to generate a new OTP.
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <code>tnx_value_mismatch</code>
+      </td>
+      <td>txn value did not match with txn value of Request OTP API.</td>
+    </tr>
+    <tr>
+      <td>
+        <code>wait_otp_generation_1min</code>
+      </td>
+      <td>Please wait for a minute to generate a new OTP.</td>
+    </tr>
+    <tr>
+      <td>
+        <code>aadhaar_locked</code>
+      </td>
+      <td>
+        Aadhaar locked by Aadhaar number holder. This mean that all permanent
+        forms of identifiers are locked for any kind of authentication. Resident
+        can still use VID.
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <code>invalid_aadhaar_number</code>
+      </td>
+      <td>Invalid Aadhaar Number/Virtual ID.</td>
+    </tr>
+    <tr>
+      <td>
+        <code>exceeded_otp_attempt</code>
+      </td>
+      <td>
+        The maximum allowed OTP attempts (3) has been exceeded. Please generate
+        a fresh OTP and try to authenticate again
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <code>aadhaar_suspended</code>
+      </td>
+      <td>Aadhaar suspended (Aadhaar is not in authenticatable status).</td>
+    </tr>
+    <tr>
+      <td>
+        <code>upstream_server_error</code>
+      </td>
+      <td>Upstream's internal service error</td>
+    </tr>
+  </tbody>
 </table>
 
 <WasPageHelpful />
