--- a/content/data/esign/notifications.mdx
+++ b/content/data/esign/notifications.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_title: Notifications
 page_title: Aadhaar eSign Notifications
-order: 5
+order: 7
 visible_in_sidebar: true
 ---
 
@@ -12,9 +12,9 @@ Below is the summary of the notifications which need to be processed on your ser
 These notifications are sent by Setu when the end user completes the eSign flow and we receive a callback from our ESP regarding the status of the signature request.
 
 <Callout type="tip">
-    Please send back an HTTP 200 status code if the request sent was processed
-    correctly to avoid receiving multiple notifications for the same eSign
-    event. Response body is ignored.
+  Please send back an HTTP 200 status code if the request sent was processed
+  correctly to avoid receiving multiple notifications for the same eSign event.
+  Response body is ignored.
 </Callout>
 <br />
 
@@ -29,7 +29,7 @@ This will help you understand the notification flow before you start to implemen
 Here’s a sample of a successful document signing by a signer, with the corresponding signature request `id` as well as the signing status for all signers associated with a signature request.
 
 <CodeBlockWithCopy language="json">
-    {`
+  {`
   {
     "data": {
       "esign": {
@@ -73,7 +73,7 @@ Here’s a sample of a successful document signing by a signer, with the corresp
 Here is a sample notification of a failed eSign attempt by a signer, for a given signature request `id`, as well as the error code for the failure.
 
 <CodeBlockWithCopy language="json">
-    {`
+  {`
   {
     "data": {
       "esign": {
@@ -117,7 +117,7 @@ Here is a sample notification of a failed eSign attempt by a signer, for a given
 Here is a sample notification of an eSign request that's been completely signed by all signers, for a given signature request `id`.
 
 <CodeBlockWithCopy language="json">
-    {`
+  {`
   {
     "data": {
       "esign": {
