--- a/content/data/esign/pdf-templating.mdx
+++ b/content/data/esign/pdf-templating.mdx
@@ -1,32 +1,29 @@
 ---
-sidebar_title: Pdf templating guide
+sidebar_title: PDF templates
 page_title: Integration guide with pdf templating API's
-order: 10
+order: 5
 visible_in_sidebar: true
 ---
 
 ## Upload the PDF template
 
-The PDF templating API's can be used to upload a PDF with fillable form template. 
+The PDF templating API's can be used to upload a PDF with fillable form template.
 Fill data into it the form and create unique PDFs for signing.
- 
+
 Here’s a quick run through of the APIs—
 
 1. **Upload document**—Upload a PDF with fillable form. You get template `id` and form fields in reponse.
-2. **Render template**-Render the template with the data to be filled in the form. Returns a document `Id`. (Can be skipped) 
+2. **Render template**-Render the template with the data to be filled in the form. Returns a document `Id`. (Can be skipped)
 3. **Create signature request**-Create a signature request with the rendered template. Get singing link in response.
 4. **Update template**-update the form fields/template doc with template `id`.
-4. **Get template**-get template doc and form fields with the template `id`. 
+5. **Get template**-get template doc and form fields with the template `id`.
 
-
-
-The render template API can be skipped and task of rendering the document can be moved to the create signature request API itself, 
-by passing the form fields and templateId to the create signature request API.  
-
+The render template API can be skipped and task of rendering the document can be moved to the create signature request API itself,
+by passing the form fields and templateId to the create signature request API.
 
 <br />
 
-Here are the URLs you would need for these APIs— 
+Here are the URLs you would need for these APIs—
 
 - Sandbox—`https://dg-sandbox.setu.co`
 - Production—`https://dg.setu.co`
@@ -71,8 +68,8 @@ files= [
               <h5>Response</h5>
               <p>
                 You will get a unique <code>id</code> which is the{" "}
-                <code>temaplateId</code> from Setu for render template/signature request
-                creation.
+                <code>temaplateId</code> from Setu for render template/signature
+                request creation.
               </p>
               <CodeBlockWithCopy language="json">
                 {` {
@@ -113,13 +110,16 @@ files= [
 
 ### Render template request
 
-Render a template by filling form data. 
+Render a template by filling form data.
 Create a filled pdf file by passing in the form field data and the template `id` in the request.
-You get an document `id` in response, which you can use to create the signature request. 
+You get an document `id` in response, which you can use to create the signature request.
 
-<Callout type="tip">Render template functtionality can also be clubbed up with create signature request.</Callout>
+<Callout type="tip">
+  Render template functtionality can also be clubbed up with create signature
+  request.
+</Callout>
 
-<br/>
+<br />
 
 Here is a quick description of the values required to call this API—
 
@@ -127,7 +127,7 @@ Here is a quick description of the values required to call this API—
 - `form_fields` The form fields with value to be filled in the template pdf
 
 <Callout type="warning">
-The image fields should be passed as base64 encoded string of jpeg/jpg.
+  The image fields should be passed as base64 encoded string of jpeg/jpg.
 </Callout>
 
 <Row>
@@ -176,8 +176,8 @@ payload= {
               <h5>Response</h5>
               <p>
                 You will get a unique <code>id</code> which is the{" "}
-                <code>temaplateId</code> from Setu for render template/signature request
-                creation.
+                <code>temaplateId</code> from Setu for render template/signature
+                request creation.
               </p>
               <CodeBlockWithCopy language="json">
                 {` {
@@ -196,12 +196,12 @@ payload= {
   </Portion>
 </Row>
 
-
-<br/>
+<br />
 
 <hr class="primary" />
 
 ### Create signature request
+
 You can use the render template feature with our create signature API or pass the document id returned from render template API.
 The create request API can be used either with a flexible configId or generic sign placement keys like lower-left, upper-right etc.
 
@@ -216,7 +216,9 @@ The create request API can be used either with a flexible configId or generic si
           label: "200",
           content: (
             <>
-            <Text size="small" weight="600">Create request using documentId (you can also use configId)</Text>
+              <Text size="small" weight="600">
+                Create request using documentId (you can also use configId)
+              </Text>
               <p>
                 <Badge type="success">SUCCESS</Badge> Setu has processed your
                 request successfully.
@@ -282,7 +284,9 @@ The create request API can be used either with a flexible configId or generic si
           label: "200",
           content: (
             <>
-            <Text size="small" weight="600">Create request using templateId and form fields.</Text>
+              <Text size="small" weight="600">
+                Create request using templateId and form fields.
+              </Text>
               <p>
                 <Badge type="success">SUCCESS</Badge> Setu has processed your
                 request successfully. You will get signing link in response.
@@ -354,7 +358,7 @@ The create request API can be used either with a flexible configId or generic si
               </CodeBlockWithCopy>
             </>
           ),
-        }
+        },
       ]}
     ></Tabs>
   </Portion>
@@ -362,20 +366,20 @@ The create request API can be used either with a flexible configId or generic si
 
 <hr class="primary" />
 
-
 ### Update the PDF template
 
-This api can be use to update the pdf template. 
+This api can be use to update the pdf template.
 The update API will behaves in this fashion:-
-  1) if just document is send in request then a new transformed form fields json will be created
-  which will overwrite the existing form fields json.
-  2) If just form fields are sent, then existing form fields json will be updated
-  with new form fields.
-  3) If both the form fields and template document are sent,
-  then existing form fields json will be updated with new form field, request's doc would be ignored.
- 
- This api uses verioned updates. You can use the get API to view older verions. 
- While singing/rendering document just the latest version can be used.
+
+1. if just document is send in request then a new transformed form fields json will be created
+   which will overwrite the existing form fields json.
+2. If just form fields are sent, then existing form fields json will be updated
+   with new form fields.
+3. If both the form fields and template document are sent,
+   then existing form fields json will be updated with new form field, request's doc would be ignored.
+
+This api uses verioned updates. You can use the get API to view older verions.
+While singing/rendering document just the latest version can be used.
 
 <Row>
   <Portion desktopSpan="whole">
@@ -417,7 +421,8 @@ files= [
               <hr className="tertiary" />
               <h5>Response</h5>
               <p>
-                You will get the updated form_fields and the doc url and version_no.
+                You will get the updated form_fields and the doc url and
+                version_no.
               </p>
               <CodeBlockWithCopy language="json">
                 {` {
@@ -455,7 +460,6 @@ files= [
 
 <hr class="primary" />
 
-
 ### Get the PDF template
 
 Call this API to get a pdf template.
@@ -472,7 +476,8 @@ Call this API to get a pdf template.
               <hr className="tertiary" />
               <h5>Request</h5>
               <p>
-                Pass the template <code>id</code> and <code>version No</code> as a URL parameter.
+                Pass the template <code>id</code> and <code>version No</code> as
+                a URL parameter.
               </p>
               <CodeBlockWithCopy language="json">
                 {`GET /api/templates/:id/:version_no `}
@@ -505,7 +510,7 @@ Call this API to get a pdf template.
               </CodeBlockWithCopy>
             </>
           ),
-        }
+        },
       ]}
     ></Tabs>
   </Portion>
