fix heading, correct get API response

--- a/content/data/esign/pdf-templating.mdx
+++ b/content/data/esign/pdf-templating.mdx
@@ -5,7 +5,7 @@ order: 5
 visible_in_sidebar: true
 ---
 
-## Upload the PDF template
+## The PDF templating API's
 
 The PDF templating API's can be used to upload a PDF with fillable form template.
 Fill data into it the form and create unique PDFs for signing.
@@ -477,7 +477,7 @@ Call this API to get a pdf template.
               <h5>Request</h5>
               <p>
                 Pass the template <code>id</code> and <code>version No</code> as
-                a URL parameter.
+                a URL parameter. If the version no is not passed, the latest version will be returned.
               </p>
               <CodeBlockWithCopy language="json">
                 {`GET /api/templates/:id/:version_no `}
@@ -486,26 +486,33 @@ Call this API to get a pdf template.
               <h5>Response</h5>
               <CodeBlockWithCopy language="json">
                 {`{
-                    "documentId": "89edaa02-076b-44e9-a993-8e5d4b5880e2",
-                    "id": "cdbf2f80-62bc-443b-b20f-102f92c9b9a2",
-                    "reason": "test",
-                    "redirectUrl": "http://setu.co",
-                    "signers": [
-                        {
-                            "birthYear": "None",
-                            "displayName": "Rahul Roy",
-                            "errCode": null,
-                            "id": "ab54f775-8f91-43b0-b3ec-b5e10b322deb",
-                            "identifier": "7042484933",
-                            "location": "patiala punjab",
-                            "signatureDetails": null,
-                            "status": "pending",
-                            "url": "https://dg.setu.co/signature/preview?requestId=cdbf2f80-62bc-443b-b20f-102f92c9b9a2&signerId=ab54f775-8f91-43b0-b3ec-b5e10b322deb"
-                        }
-                    ],
-                    "status": "sign_initiated",
-                    "traceId": "1-67e51e0a-1c005d0110441795624a557e"
-                } 
+    "template_id": "8bba0bea-0c63-4eb2-9da9-11b5114b579b",
+    "name": "aof groww",
+    "form_fields": {
+        "text": {
+            "dob": "",
+            "city": "",
+            "bo_id": "",
+            "dl_no": "",
+            "dp_id": "",
+            "place": "",
+            "state": ""
+        },
+        "check_boxes": {
+            "#c.raa.r1": "",
+            "#c.raa.r2": "",
+            "#c.gender.F": "",
+            "#c.gender.M": "",
+            "#c.gender.U": ""
+        },
+        "images": {
+            "#i.bank_proof": ""
+        }
+    },
+    "version_no": 1,
+    "template_doc_url": "http://localhost:4566/dg-uat-persistent/b186f03d-3db2-4bf1-b75e-4b6fde0e27d8",
+    "traceId": "1bd6877f-df76-4930-8014-94595e358485"
+    }
             `}
               </CodeBlockWithCopy>
             </>
