--- a/content/data/esign/pdf-templating.mdx
+++ b/content/data/esign/pdf-templating.mdx
@@ -5,9 +5,9 @@ order: 5
 visible_in_sidebar: true
 ---
 
-## The PDF templating API's
+## PDF templating API's
 
-The PDF templating API's can be used to upload a PDF with fillable form template.
+PDF templating API's can be used to upload a PDF with fillable form template.
 Fill data into it the form and create unique PDFs for signing.
 
 Here’s a quick run through of the APIs—
