Added create signature request with estamp and minor modifications in estamp

--- a/content/data/esign/estamp.mdx
+++ b/content/data/esign/estamp.mdx
@@ -52,6 +52,10 @@ Here is a quick description of the additional values required to be passed for s
 - `eStampValue` the value of the eStamp
 - `eStampMergePosition` supported values are -1 and 0. -1 indicates that the eStamp PDF would be merged at the end of the document, 0 indicates the eStamp PDF will be merged at the start of the document.
 
+<Callout type="tip">
+  <code>eStampState</code> and <code>eStampValue</code> are optional parameters, if not passed the system will pick the lowest value estamp available.
+</Callout>
+
 <hr class="tertiary" />
 
 <Callout type="tip">
@@ -62,23 +66,22 @@ Here is a quick description of the additional values required to be passed for s
     <a href="/data/esign/overview">read here for more details</a>,
 </Callout>
 
+<br/>
 
+<Text size="large" weight="600">Esign with eStamp</Text>
 
-
-<Tabs
+<Row>
+  <Portion desktopSpan="whole">
+    <Tabs
       tabs={[
         {
           key: "1",
           label: "201",
           content: (
             <>
-            <Text size="small" weight="600">Esign with eStamp</Text>
-            <Card padding="nano" shape="rounded" marginBottom="micro">
-  <details>
-    <summary>
-                <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="success">SUCCESS</Badge> Setu has processed your
-                request successfully.</Text>
-    </summary>
+              <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="success">SUCCESS</Badge> Setu has processed your
+              request successfully.</Text>
+              <br/>
               <hr className="tertiary" />
               <h5>Request</h5>
               <CodeBlockWithCopy language="json">
@@ -112,36 +115,36 @@ Here is a quick description of the additional values required to be passed for s
               </p>
               <CodeBlockWithCopy language="json">
                 {`{ 
-                    "documentId": "67e0ca30-49e4-4883-86f9-3762f0e6798c", 
-                    "id": "cb80bfb4-d163-426e-ad57-1fd8889e62d4", 
-                    "redirectUrl": "your-redirect-url.com?other_keys=youcandefinehere", 
-                    "eStampState": 17,
-                    "eStampValue": 50,
-                    "eStampMergePosition": 0,
-                    "signers": [{ 
-                            "displayName": "John Doe", 
-                            "birthYear": "1988", //included if specified in Create signature request API
-                            "id": "34f94af1-a8b9-4797-b287-c5ef7bff99a1", 
-                            "identifier": "9876543210", 
-                            "signatureDetails": null, 
-                            "status": "pending", 
-                            "url": "https://dg-uat.setu.co/signature/estamp/preview?requestId=6bae9d1f-0fa6-44e5-a801-3ad4a5f10a12&signerId=34f94af1-a8b9-4797-b287-c5ef7bff99a1" 
-                    }], 
-                    "status": "sign_initiated" 
-                } `}
+    "documentId": "67e0ca30-49e4-4883-86f9-3762f0e6798c", 
+    "id": "cb80bfb4-d163-426e-ad57-1fd8889e62d4", 
+    "redirectUrl": "your-redirect-url.com?other_keys=youcandefinehere", 
+    "eStampState": 17,
+    "eStampValue": 50,
+    "eStampMergePosition": 0,
+    "signers": [{ 
+            "displayName": "John Doe", 
+            "birthYear": "1988", //included if specified in Create signature request API
+            "id": "34f94af1-a8b9-4797-b287-c5ef7bff99a1", 
+            "identifier": "9876543210", 
+            "signatureDetails": null, 
+            "status": "pending", 
+            "url": "https://dg-uat.setu.co/signature/estamp/preview?requestId=6bae9d1f-0fa6-44e5-a801-3ad4a5f10a12&signerId=34f94af1-a8b9-4797-b287-c5ef7bff99a1" 
+    }], 
+    "status": "sign_initiated" 
+} `}
               </CodeBlockWithCopy>
               <Callout type="warning">
                     You can add one extra count to <code>onPages</code> 
                     field in create signature request body 
                     to account for the one extra page created by merging eStamp.
                 </Callout>
-              </details>
-              </Card>
             </>
           )
         }
       ]}
     ></Tabs>
+  </Portion>
+</Row>
 
 <hr class="primary" />
 
@@ -160,6 +163,7 @@ Here is a quick description of the additional values required to be passed for s
 <tr><td>17</td><td>Karnataka</td><td>100, 200, 500 & above</td><td>eStamp</td></tr>
 <tr><td>20</td><td>Madhya Pradesh</td><td>50, 100, 500 & above</td><td>eStamp & Physical stamp</td></tr>
 <tr><td>21</td><td>Maharashtra</td><td>100, 500</td><td>Physical stamp</td></tr>
+<tr><td>27</td><td>Puducherry</td><td>20</td><td>eStamp</td></tr>
 <tr><td>28</td><td>Punjab</td><td>10 to 500</td><td>eStamp</td></tr>
 <tr><td>29</td><td>Rajasthan</td><td>50, 100, 200, 500 & above</td><td>eStamp</td></tr>
 <tr><td>31</td><td>Tamil Nadu</td><td>10 to 1 lakh & above</td><td>eStamp</td></tr>
