formatted code block with <CodeBlockWithCopy> tag

--- a/content/data/esign/name-match.mdx
+++ b/content/data/esign/name-match.mdx
@@ -44,7 +44,8 @@ This data will be optionally available in the following ways:
 
 A sample name match data in API response and notification will look like this:
 
-```json
+<CodeBlockWithCopy language="json">
+{`
 ......
 "signers": [
     {
@@ -63,7 +64,8 @@ A sample name match data in API response and notification will look like this:
     }
 ],
 ......
-```
+`}
+</CodeBlockWithCopy>
 
 Possible values for the `match_type` key:
 
