--- a/content/data/kyc/encryption.mdx
+++ b/content/data/kyc/encryption.mdx
@@ -9,11 +9,13 @@ visible_in_sidebar: true
 
 ### Overview
 
-Our secure data add-on is designed to be integrated with any KYC API to enhance the protection of sensitive data during transmission.  
-With this add-on, non-sensitive fields (such as `id` and `traceId`) remain visible for tracking and logging, while all sensitive information is securely packaged inside the `encrypted_data` field.  
+Our secure data add-on is designed to be integrated with any KYC API to enhance the protection of sensitive data during transmission.
+
+With this add-on, non-sensitive fields (such as `id` and `traceId`) remain visible for tracking and logging, while all sensitive information is securely packaged inside the `encrypted_data` field.
+
 Setu’s public key, fetched dynamically, is used to secure the sensitive data in your request. The response from Setu will also be secured, and you must decrypt it to reconstruct the complete message.
 
----
+<hr class="primary" />
 
 ## Integration Steps
 
@@ -40,7 +42,7 @@ GET /v2/public-key
 
 *Note: The public key may be updated over time.*
 
----
+<hr class="primary" />
 
 ### 2. Securing Sensitive Data (Request)
 
@@ -77,7 +79,7 @@ Use Setu's public key (obtained from the previous step) to secure your request p
 
 *Note: In your secured request, use Setu's public key (from section 1) to secure the data.*
 
----
+<hr class="primary" />
 
 ### 3. Response Handling
 
@@ -113,7 +115,7 @@ After decryption, merge the recovered sensitive data with the unprotected fields
 
 *Note: Store your private keys securely and share your public key to setu*
 
----
+<hr class="primary" />
 
 ## Code Examples
 
@@ -148,3 +150,5 @@ After decryption, merge the recovered sensitive data with the unprotected fields
     }
   ]}
 />
+
+<WasPageHelpful />
