Updated payment failure api webhook for pre built screen in COU

--- a/content/payments/billpay/pre-built-screens/webhooks.mdx
+++ b/content/payments/billpay/pre-built-screens/webhooks.mdx
@@ -669,7 +669,12 @@ Below are the parameter tables and sample payloads for the listed events. Note t
     "dueDate": "2021-05-23", // if available
     "amountPaid": "601.00",
     "event": "bill_payment_failure",
-    "refId": "CMA0I65RCU2I32C3L0H0KNYQYAG40021831"
+    "refId": "CMA0I65RCU2I32C3L0H0KNYQYAG40021831",
+    "error": {
+        "Code": "insufficient-balance",
+        "Message": "Insufficient balance in the bank account. Please ensure sufficient funds are available before retrying.",
+        "Type": "FUND_TRANSFER"
+    }
 }`}
         </CodeBlockWithCopy>
         <table>
@@ -816,6 +821,12 @@ Below are the parameter tables and sample payloads for the listed events. Note t
                 <td>
                     <code>CMA0I65RCU2I32C3L0H0KNYQYAG40021831</code>
                 </td>
+            </tr>
+            <tr>
+                <td>error</td>
+                <td>Object</td>
+                <td>Error details for failure of bill payment</td>
+                <td><code>[&#123;&quot;Code&quot;: &quot;insufficient-balance&quot;, &quot;Message&quot;: &quot;66578Insufficient balance in the bank account. Please ensure sufficient funds are available before retrying.01290&quot;, &quot;Type&quot;: &quot;FUND_TRANSFER&quot;]</code></td>
             </tr>
         </table>
     </details>
