correct name of sample doc

--- a/content/data/esign/pdf-templating.mdx
+++ b/content/data/esign/pdf-templating.mdx
@@ -487,7 +487,7 @@ Call this API to get a pdf template.
               <CodeBlockWithCopy language="json">
                 {`{
     "template_id": "8bba0bea-0c63-4eb2-9da9-11b5114b579b",
-    "name": "aof groww",
+    "name": "aof template",
     "form_fields": {
         "text": {
             "dob": "",
